Fixed pictures to align more uniformly together

--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,8 @@
-.nytimes {
-    padding-top: 40px;
+.twitter-timeline{
+   float: right;
 }
 
-.twitter-timeline {
-    float: right;
-}
-
-.h2 {
-  text-decoration: underline;
-}
-.jumbotron {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    width: 100%;
-    margin-bottom: 0px;
-}
-
-.lead{
-    margin-bottom: 0px;
-}
-
-.news-card {
+.news-card{
     float: left;
     margin-left: 2%;
     margin-right: 2%;
@@ -28,27 +10,12 @@
 }
 
 .card-img-top {
-    width: 100%!important;
-    height: auto!important;
-    object-fit: contain;
+  margin-top: 20px;
+  width: 100%!important;
+  height: 30%!important;
+  object-fit: contain;
 }
 
-.list-group {
-    padding-top: 10%;
-    padding-bottom: 10%;
-}
-
-.card-body {
-    object-fit: contain;
-}
-
-.specific-charity-img{
-    height: 100%;
-    width: 200%;
-    text-align: left;
-}
-
-.specific-charity-info{
-    height: 100%;
-    width: 400%;
+.card-body{
+  object-fit: contain;
 }
